# 3D-Renderer

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: docs.yml
cmake/: docs.cmake  external_libs.cmake  install-config.cmake  install-rules.cmake  variables.cmake
docs/: Doxyfile.in  conf.py.in
example/: CMakeLists.txt
example/BMP_Writer/: BMP_Writer.cpp  BMP_Writer.hpp
example/example_lighting/: CMakeLists.txt  example_lighting.cpp
example/example_load_obj/: CMakeLists.txt  example_load_obj.cpp
example/example_multiple_objects/: CMakeLists.txt  example_multiple_objects.cpp
example/example_simple_piramide/: CMakeLists.txt  example_simple_piramide.cpp
example/example_texturing/: CMakeLists.txt  example_texturing.cpp  textured_cube.fbx
include/renderer/: camera.hpp  image.hpp  include_all.hpp  object.hpp  primitives.hpp  renderer.hpp  scene.hpp  transform.hpp  utils.hpp
include/renderer/data_structures/: primitives.hpp
include/renderer/object/: object.hpp
source/renderer/: CMakeLists.txt  camera.cpp  camera.hpp  color.hpp  image.cpp  image.hpp  include_all.hpp  light.hpp  object.cpp  object.hpp  primitives.hpp  renderer.cpp  renderer.hpp  resources_manager.cpp  resources_manager.hpp  resources_types.hpp  scene.cpp  scene.hpp  scene_object.cpp  scene_object.hpp  thread_pool.cpp  thread_pool.hpp  transform.cpp  transform.hpp  types.hpp  utils.cpp  utils.hpp
source/renderer/object/: CMakeLists.txt  object.cpp
